# medical_tests_final

./: .env.sample  README.MD  pyproject.toml
config/: settings.py  urls.py
medical_services/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
medical_services/migrations/: 0001_initial.py  0002_service.py  0003_cart.py
static/assets/css/: main.css
static/assets/js/: main.js
static/css/: style.css
templates/: inc_menu.html  index.html
templates/main/: index.html
templates/medical_services/: cart_form.html  cart_list.html  category_form.html  category_list.html  service_form.html  services_list.html
templates/users/: change_password.html  confirm_email.html  confirm_email_fail.html  confirm_email_success.html  password_reset.html  password_reset_confirm.html  password_reset_email.html  password_reset_form.html  register.html  u_confirm_delete.html  u_detail.html  u_form.html  u_list.html  u_login.html  u_register.html  u_verification.html  verification_email.html  verification_error.html
templatetags/: image_tags.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_remove_user_username.py
